# src/main/java/dev/pollito/users_manager/adapter/in/rest/UserController.java
@@ -2,7 +2,7 @@ package dev.pollito.users_manager.adapter.in.rest;
 
 import dev.pollito.users_manager.adapter.in.rest.api.UsersApi;
 import dev.pollito.users_manager.adapter.in.rest.dto.User;
-import dev.pollito.users_manager.adapter.in.rest.mapper.UserMapper;
+import dev.pollito.users_manager.adapter.in.rest.mapper.AdapterInRestUserMapper;
 import dev.pollito.users_manager.domain.port.in.UserService;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
@@ -13,15 +13,16 @@ import org.springframework.web.bind.annotation.RestController;
 @RequiredArgsConstructor
 public class UserController implements UsersApi {
   private final UserService userService;
-  private final UserMapper userMapper;
+  private final AdapterInRestUserMapper adapterInRestUserMapper;
 
   @Override
   public ResponseEntity<List<User>> findAll() {
-    return ResponseEntity.ok(userService.getUsers().stream().map(userMapper::map).toList());
+    return ResponseEntity.ok(
+        userService.findAll().stream().map(adapterInRestUserMapper::map).toList());
   }
 
   @Override
   public ResponseEntity<User> findById(Long id) {
-    return ResponseEntity.ok(userMapper.map(userService.getUserById(id)));
+    return ResponseEntity.ok(adapterInRestUserMapper.map(userService.findById(id)));
   }
 }
